--- a/BUILD.gn
+++ b/BUILD.gn
@@ -38,7 +38,7 @@ declare_args() {
   skia_enable_gpu = true
   skia_enable_pdf = true
   skia_enable_spirv_validation = is_skia_dev_build && is_debug
-  skia_enable_tools = is_skia_dev_build
+  skia_enable_tools = false
   skia_enable_vulkan_debug_layers = is_skia_dev_build && is_debug
   skia_vulkan_sdk = getenv("VULKAN_SDK")
 }
