--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "third_party/externals/icu"]
 	path = third_party/externals/icu
 	url = https://chromium.googlesource.com/chromium/deps/icu.git
+[submodule "out/ios64/freetype2-ios"]
+	path = out/ios64/freetype2-ios
+	url = https://github.com/cdave1/freetype2-ios.git
