--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "out/ios64/freetype2-ios"]
 	path = out/ios64/freetype2-ios
 	url = https://github.com/cdave1/freetype2-ios.git
+[submodule "third_party/externals/sfntly"]
+	path = third_party/externals/sfntly
+	url = https://chromium.googlesource.com/external/github.com/googlei18n/sfntly.git
